kubernetes/k3s-01/workloads/archivebox/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: archivebox
  namespace: archivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archivebox
  template:
    metadata:
      labels:
        app: archivebox
    spec:
      containers:
        - name: archivebox
          image: docker.io/archivebox/archivebox:0.9.71@sha256:56057dbe5ab387441e96c25a531d8934768bc977f94b9a91428f6913945e9b0d
          volumeMounts:
            - name: archivebox-data
              mountPath: /data
      volumes:
        - name: archivebox-data
          persistentVolumeClaim:
            claimName: archivebox-data-encrypted
