kubernetes/k3s-01/workloads/archivebox/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: archivebox
  namespace: archivebox
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: archivebox
